[gd_scene load_steps=5 format=3 uid="uid://vn2pj1fllvl8"]

[ext_resource type="Script" path="res://components/HealthComponent.gd" id="1_dbdpc"]
[ext_resource type="Theme" uid="uid://ccb7csnxqndm6" path="res://ui/my_ui_theme.tres" id="2_yweqt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rslkd"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6j3hc"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_dbdpc")

[node name="HPBarRemoteTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Bars")
update_rotation = false

[node name="Bars" type="Node2D" parent="."]
top_level = true

[node name="Bar2" type="ProgressBar" parent="Bars"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = -37.0
offset_right = 35.0
offset_bottom = -29.0
grow_horizontal = 2
scale = Vector2(1, 0.2)
theme = ExtResource("2_yweqt")
theme_override_styles/fill = SubResource("StyleBoxFlat_rslkd")
value = 77.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Bar1" type="ProgressBar" parent="Bars"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = -37.0
offset_right = 35.0
offset_bottom = -29.0
grow_horizontal = 2
scale = Vector2(1, 0.2)
theme = ExtResource("2_yweqt")
theme_override_styles/background = SubResource("StyleBoxEmpty_6j3hc")
value = 55.0
show_percentage = false
metadata/_edit_use_anchors_ = true
